Getting started on the UX. The plan is to select the label for Contacts from a spinner and to send it over via Intent. Once a label is set on an edit text it cannot be used again. The Notes label on the contact will allow additional label from the Biz card to be set into the record.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,17 @@
     <string name="description_info">Info</string>
     <string name="request_permission">This app needs camera permission.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
+
+    <string-array name="Labels">
+        <item>Name</item>
+        <item>Phone</item>
+        <item>Email</item>
+        <item>Company</item>
+        <item>Job Title</item>
+        <item>Address</item>
+        <item>I.M.</item>
+        <item>Notes</item>
+        <item>Second Phone</item>
+        <item>Second Email</item>
+    </string-array>
 </resources>
