--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="ok">OK</string>
-    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
-    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
-    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
-    <string name="title_activity_main">Ocr Detector Sample</string>
-    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
-    <string name="read_text">Detect Text</string>
-    <string name="auto_focus">Auto Focus</string>
-    <string name="use_flash">Use Flash</string>
+    <string name="retry">Retry</string>
+    <string name="confirm">Create Context</string>
+
     <string name="ocr_success">Text read successfully</string>
     <string name="ocr_failure">No text captured</string>
     <string name="ocr_error">"Error reading text: %1$s"</string>
 
-    <string name="picture">Picture</string>
-    <string name="description_info">Info</string>
-    <string name="request_permission">This app needs camera permission.</string>
-    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
+    <string-array name="contact_keys">
+        <item>ContactsContract.Intents.Insert.NAME</item>
+        <item>ContactsContract.Intents.Insert.PHONE</item>
+        <item>ContactsContract.Intents.Insert.EMAIL</item>
+        <item>ContactsContract.Intents.Insert.COMPANY</item>
+        <item>ContactsContract.Intents.Insert.JOB_TITLE</item>
+        <item>ContactsContract.Intents.Insert.POSTAL</item>
+        <item>ContactsContract.Intents.Insert.IM_HANDLE</item>
+        <item>ContactsContract.Intents.Insert.NOTES</item>
+        <item>ContactsContract.Intents.Insert.SECONDARY_PHONE</item>
+        <item>ContactsContract.Intents.Insert.SECONDARY_EMAIL</item>
+    </string-array>
 
-    <string-array name="Labels">
+    <string-array name="labels">
         <item>Name</item>
         <item>Phone</item>
         <item>Email</item>
