Latest stuff. The contact data is getting dropped.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="retry">Retry</string>
-    <string name="confirm">Create Context</string>
+    <string name="confirm">Create Contact</string>
     <string name="photo">Take Photo</string>
 
     <string name="ocr_success">Text read successfully</string>
