--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,14 @@
 <resources>
     <string name="retry">Retry</string>
     <string name="confirm">Create Contact</string>
-    <string name="photo">Take Photo</string>
+    <string name="label">Scan A Contact</string>
+    <string name="preface">Take a photo of a business card \n or \n
+    Choose a gallery photo</string>
+    <string name="photo">Take a Photo</string>
+    <string name="gallery_prompt">Select a Photo</string>
+    <string name="gallery">Choose an Image</string>
+    <string name="permissionHelp">Permissions are needed to use this app</string>
+    <string name="returnError">Please try again. The image is missing.</string>
 
     <string name="ocr_success">Text read successfully</string>
     <string name="ocr_failure">No text captured</string>
