Found an issue with Samsung camera defaults. Fixed up "share" in Spanish. Added some color to the icon.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,6 +18,7 @@
     <string name="no_text">No se Encontro Texto</string>
     <string name="scan2label">Escaneo</string>
     <string name="copied">Texto Copiado</string>
+    <string name="share">Compartir Texto</string>
     <string-array name="labels">
         <item>Nombre</item>
         <item>Telefono</item>
