--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="confirm">Create Contact</string>
     <string name="label">Scan</string>
     <string name="label2">Check Text and Save</string>
-    <string name="preface">Take a photo (of a business card) \n OR \n Choose a photo of text </string>
+    <string name="startText1">Take a photo (of a business card)</string>
+    <string name="startText2">OR</string>
+    <string name="startText3">Choose a photo of text</string>
     <string name="photo">Take a Photo</string>
     <string name="gallery_prompt">Select a Photo</string>
     <string name="permissionHelp">Permissions are needed to use this app</string>
@@ -17,7 +19,7 @@
     <string name="no_text">No text was found</string>
     <string name="scan2label">Scan to Text</string>
     <string name="copied">Text Copied</string>
-    <string name="load">Please Wait</string>
+    <string name="load">Reading Text</string>
     <string name="share">Share Text</string>
     <string-array name="labels">
         <item>Name</item>
