--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="startText3">Choose a photo of text</string>
     <string name="photo">Take a Photo</string>
     <string name="gallery_prompt">Select a Photo</string>
+    <string name="makeRequest">Make Request</string>
+    <string name="no_app">No app found to send text</string>
     <string name="permissionHelp">Permissions are needed to use this app</string>
     <string name="returnError">Please try again. The image is missing.</string>
     <string name="save">Save</string>
