--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,16 @@
     <string name="startText3">Choose a photo of text</string>
     <string name="photo">Take a Photo</string>
     <string name="gallery_prompt">Select a Photo</string>
+    <string name="makeRequest">Request Permission</string>
+    <string name="no_app">No apps found for sending text</string>
+    <string name="contact_error">A contact must have a name</string>
+
     <string name="permissionHelp">Permissions are needed to use this app</string>
     <string name="returnError">Please try again. The image is missing.</string>
     <string name="save">Save</string>
     <string name="ocr_success">Successful scan</string>
     <string name="no_text">No text was found</string>
-    <string name="scan2label">Scan to Text</string>
+    <string name="scan2label">Scan Text</string>
     <string name="copied">Text Copied</string>
     <string name="load">Reading Text</string>
     <string name="share">Share Text</string>
@@ -22,13 +26,13 @@
         <item>Name</item>
         <item>Phone</item>
         <item>Email</item>
-        <item>Company</item>
         <item>Job Title</item>
+        <item>Company</item>
         <item>Address</item>
         <item>I.M.</item>
-        <item>Notes</item>
         <item>Second Phone</item>
         <item>Second Email</item>
+        <item>Notes</item>
     </string-array>
 
 </resources>
